fixing spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2297,6 +2297,9 @@ input, select, textarea {
 		ul.actions li {
 			padding: 0 0 0 1em;
 			vertical-align: middle;
+		}
+
+		ul.actions input{
 			margin-top: 1em;
 		}
 
